media query para outras telas

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,9 @@ section#login {
     border-radius: 20px;
     overflow: hidden; /* Para esconder o que está fora da section, no caso, a imagem. */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
