--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -48,5 +48,6 @@ Telas Grandes: acima de 1200px
     section#login> div#formulario {
         float: right;
         width: 50%;
+        height: 100%;
     }
 }
