--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -28,6 +28,14 @@ Telas Grandes: acima de 1200px
         float: right; /*Formulário à direita. "A imagem vai flutuar à direita"*/
         width: 70%;
     }
+
+    div#formulario > h1 {
+        font-size: 1.8em;
+    }
+
+    div#formulario > p {
+        font-size: 1.5em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -49,5 +57,13 @@ Telas Grandes: acima de 1200px
         float: left; /*A imagem vai "flutuar" à esquerda.*/
         width: 50%;
         height: 100%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.5em;
     }
 }
