--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,3 +63,53 @@ div#formulario > p {
     font-size: 0.8em;
     text-align: justify;
 }
+
+form > div.campo {
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px; /*margem em cima e margem embaixo 5px, esquerda e direita 0px*/
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: aquamarine;
+    border: ;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: rgb(95, 196, 162);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40%;
+    padding-top: ;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    border: 1px solid aquamarine;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: aquamarine;
+}
+
+form > a.botao > i {
+
+}
