--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,15 +29,14 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
+    
     background-color: white;
     width: 250px;
     height: 500px;
     border-radius: 20px;
     overflow: hidden; /* Para esconder o que está fora da section, no caso, a imagem. */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.514);
-
+    transform: translate(-50%, -50%); /*As transformações e "translates" devem ficar por último. Sempre!!!*/
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -66,15 +65,39 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px; /*margem em cima e margem embaixo 5px, esquerda e direita 0px*/
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > i {
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: aquamarine;
+    font-size: 1em;
+    width: calc(100% - 45px); /*Não entendi. Rever!!!*/
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px); /*Esta configuração tem que ficar SEMPRE por último.*/
+}
+
+div.campo > input:focus-within {
+    background-color: white; /*O campo vai ficar branco quando começar a digitar nele. */
 }
 
 form > input[type=submit] {
@@ -83,7 +106,6 @@ form > input[type=submit] {
     width: 100%;
     height: 40px;
     background-color: aquamarine;
-    border: ;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -98,7 +120,6 @@ form > a.botao {
     font-size: 1em;
     width: 100%;
     height: 40%;
-    padding-top: ;
     padding-bottom: 5px;
     margin-top: 5px;
     border: 1px solid aquamarine;
